overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 
 body {
   font-family: "Karla", sans-serif;
+  overflow: hidden;
 }
 /*
 * ================ Main ================
